--- a/azure-pipeline-SQAnalysis.yml
+++ b/azure-pipeline-SQAnalysis.yml
@@ -26,7 +26,7 @@ steps:
   inputs:
     packageType: 'runtime'
     version: '2.0.0'
-
+    
 - task: Npm@1
   inputs:
     command: 'install'
@@ -43,22 +43,22 @@ steps:
     projectKey: 'jbfraser1_SailScores'
     projectName: 'SailScores'
     extraProperties: |
-      sonar.exclusions=**/obj/**,**/*.dll
-      sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/coverage.opencover.xml
-      sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
+        sonar.exclusions=**/obj/**,**/*.dll
+        sonar.cs.opencover.reportsPaths=$(Agent.TempDirectory)/**/coverage.opencover.xml
+        sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build $(buildConfiguration)'
   inputs:
     command: 'build'
-    arguments: '-r $(rid) --configuration $(buildConfiguration) -p:SourceRevisionId=$(Build.SourceVersion) -p:Version=$(VERSION_TAG) -p:CollectCoverage=true -p:CoverletOutputFormat=opencover'
+    arguments: '-r $(rid) --configuration $(buildConfiguration) -p:SourceRevisionId=$(Build.SourceVersion)'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet test'
   inputs:
     command: 'test'
     projects: '**/*Test.Unit/*.csproj'
-    arguments: '--no-restore --collect:"XPlat Code Coverage"'
+    arguments: '--no-restore --collect:"XPlat Code Coverage" --settings:$(Build.SourcesDirectory)/SailScores.Test.Unit/runsettings.xml'
 
 - task: SonarCloudAnalyze@1
   displayName: 'Run SonarCloud analysis'
