Starting on LHYC Anonymous tests
Rename

--- a/SailScores.SeleniumTests/appSettings.json
+++ b/SailScores.SeleniumTests/appSettings.json
@@ -2,7 +2,8 @@
   "SailScores": {
     "TestEmail": null,
     "TestPassword": null,
-    "TestClubInitials": "TEST"
+    "TestClubInitials": "TEST",
+    "BaseUrl": "https://localhost:44334"
   }
 
 }
