--- a/SailScores.Web/web.config
+++ b/SailScores.Web/web.config
@@ -17,7 +17,7 @@
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
     <urlCompression doDynamicCompression="true" />
-    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" hostingModel="InProcess">
+    <aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="false" hostingModel="InProcess">
       <environmentVariables>
         <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44334" />
         <environmentVariable name="COMPLUS_ForceENC" value="1" />
