--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -7,21 +7,13 @@
   "JwtIssuer": "http://yourdomain.com",
   "JwtExpireDays": 30,
   "sslPort": "NotSet",
-  "Serilog": {
-    "MinimumLevel": {
+  "ApplicationInsights": {
+    "InstrumentationKey": "putinstrumentationkeyhere"
+  },
+  "Logging": {
+    "LogLevel": {
       "Default": "Warning"
-    },
-    "WriteTo": [
-      {
-        "Name": "MSSqlServer",
-        "Args": {
-          "connectionString": "DefaultConnection",
-          "tableName": "Logs",
-          "autoCreateSqlTable": true
-        }
-      }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    }
   },
   "EmailConfiguration": {
     "FromAddress": "info@sailscores.com",
