Need speed for Club Stats
WIP


WIP continues


WIP: getting there


WIP: stat display needs work


hide total if one fleet


Club Stats page cleaned up

--- a/SailScores.Database/SailScores.Database.csproj
+++ b/SailScores.Database/SailScores.Database.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Sql\ClubStats.sql" />
     <None Remove="Sql\RankCounts.sql" />
     <None Remove="Sql\RankCountsById.sql" />
   </ItemGroup>
@@ -31,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Sql\ClubStats.sql" />
     <EmbeddedResource Include="Sql\RankCountsById.sql" />
     <EmbeddedResource Include="Sql\RankCounts.sql" />
   </ItemGroup>
