--- a/SailScores.Utility/SailScores.Utility.csproj
+++ b/SailScores.Utility/SailScores.Utility.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-preview.7.20364.11" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-rc.1.20451.14" />
   </ItemGroup>
 
   <ItemGroup>
