Preliminary results supported
Closes #159
Closes #158
Moved Preliminary to State

--- a/SailScores.Database/SailScores.Database.csproj
+++ b/SailScores.Database/SailScores.Database.csproj
@@ -19,6 +19,8 @@
     <Compile Remove="Migrations\20190808011642_CreateRegatta.Designer.cs" />
     <Compile Remove="Migrations\20191219184130_weather.cs" />
     <Compile Remove="Migrations\20191219184130_weather.Designer.cs" />
+    <Compile Remove="Migrations\20200923212129_isPreliminary.cs" />
+    <Compile Remove="Migrations\20200923212129_isPreliminary.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
