Better text on club request pages

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -17,6 +17,7 @@
   },
   "EmailConfiguration": {
     "FromAddress": "info@sailscores.com",
+    "FromName": "SailScores",
     "SendGridApiKey": "1234567890"
   },
   "NotificationEmail": "info@sailscores.com"
