Redirect for certain logins
Privacy Policy
Client side application insights added
SEO fixes

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -13,6 +13,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
   "EmailConfiguration": {
