Speech Recog for Race Results

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -25,5 +25,11 @@
     "FromName": "SailScores",
     "SendGridApiKey": "1234567890"
   },
-  "NotificationEmail": "info@sailscores.com"
+  "NotificationEmail": "info@sailscores.com",
+  "AzureSpeechRegion": "northcentralus",
+  "AzureSpeechSubscriptionKey": "cogservicekeyGoesHere",
+  "OpenWeatherMapAppId": "weatherAppId"
+
+
+
 }
