Fleet create and edit allow competitor create

--- a/SailScores.Web/Scripts/tsconfig.json
+++ b/SailScores.Web/Scripts/tsconfig.json
@@ -18,6 +18,7 @@
   "files": [
     "./guid.ts",
     "./raceEditor.ts",
+    "./fleetEditor.ts",
     "./interfaces/CompetitorDto.cs.d.ts"
   ],
   "compileOnSave": true
