--- a/SailScores.Database/SailScores.Database.csproj
+++ b/SailScores.Database/SailScores.Database.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <None Remove="Sql\ClubStats.sql" />
+    <None Remove="Sql\DeletableCompetitors.sql" />
     <None Remove="Sql\RankCounts.sql" />
     <None Remove="Sql\RankCountsById.sql" />
     <None Remove="Sql\SiteStats.sql" />
@@ -35,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Sql\DeletableCompetitors.sql" />
     <EmbeddedResource Include="Sql\SiteStats.sql" />
     <EmbeddedResource Include="Sql\ClubStats.sql" />
     <EmbeddedResource Include="Sql\RankCountsById.sql" />
