gulp-sass updates

--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -13,7 +13,8 @@
     "gulp-clean-css": "4.2.0",
     "gulp-concat": "2.6.1",
     "gulp-rename": "2.0.0",
-    "gulp-sass": "4.0.2",
+    "gulp-sass": "5.1.0",
+    "sass": "1.49.9",
     "merge-stream": "2.0.0",
     "ts-loader": "6.2.1",
     "typescript": "3.7.4",
