AppInsights requires new config element

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -8,7 +8,8 @@
   "JwtExpireDays": 30,
   "sslPort": "NotSet",
   "ApplicationInsights": {
-    "InstrumentationKey": "putinstrumentationkeyhere"
+    "InstrumentationKey": "putinstrumentationkeyhere",
+    "ConnectionString": "InstrumentationKey=putinstrumentationkeyhere;IngestionEndpoint=https://centralus-3.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/"
   },
   "Logging": {
     "LogLevel": {
@@ -29,5 +30,4 @@
   "AzureSpeechRegion": "northcentralus",
   "AzureSpeechSubscriptionKey": "cogservicekeyGoesHere",
   "OpenWeatherMapAppId": "weatherAppId"
-
 }
