--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*",
   "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
