--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -26,6 +26,8 @@
     "FromName": "SailScores",
     "SendGridApiKey": "1234567890"
   },
+  "MailchimpApiKey": "12345678901",
+  "MailchimpAudienceId": "111111",
   "NotificationEmail": "info@sailscores.com",
   "AzureSpeechRegion": "northcentralus",
   "AzureSpeechSubscriptionKey": "cogservicekeyGoesHere",
