IndexNow and some SEO

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -31,5 +31,9 @@
   "NotificationEmail": "info@sailscores.com",
   "AzureSpeechRegion": "northcentralus",
   "AzureSpeechSubscriptionKey": "cogservicekeyGoesHere",
-  "OpenWeatherMapAppId": "weatherAppId"
+  "OpenWeatherMapAppId": "weatherAppId",
+  "IndexNow": {
+    "Token": "12345678901234567890",
+    "SubmissionUrl": "https://api.indexnow.org/IndexNow"
+  }
 }
