--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -25,13 +25,14 @@
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.3.5",
     "d3": "7.6.1",
-    "devbridge-autocomplete": "^1.4.11",
+    "devbridge-autocomplete": "^1.5.0",
     "dragula": "3.7.2",
     "gulp-cli": "^3.0.0",
-    "jquery": "3.6.0",
+    "jquery": "^3.6.0",
     "jquery-ajax-unobtrusive": "3.2.6",
     "jquery-validation": "1.19.5",
     "jquery-validation-unobtrusive": "3.2.11",
+    "select2": "^4.1.0-rc.0",
     "select2-bootstrap-5-theme": "1.3.0",
     "summernote": "0.8.20"
   }
