--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -8,16 +8,37 @@
   "JwtExpireDays": 30,
   "sslPort": "NotSet",
   "ApplicationInsights": {
-    "InstrumentationKey": "putinstrumentationkeyhere",
-    "ConnectionString": "InstrumentationKey=putinstrumentationkeyhere;IngestionEndpoint=https://centralus-3.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/"
+    "InstrumentationKey": "KEY_GOES_HERE",
+    "ConnectionString": "CONNECTION_STRING_HERE",
+    "EnableAdaptiveSampling": true,
+    "EnableDependencyTracking": true,
+    "EnablePerformanceCounterCollection": true,
+    "EnableHeartbeat": true,
+    "DeveloperMode": false,
+    "SamplingSettings": {
+      "IsEnabled": true,
+      "MaxTelemetryItemsPerSecond": 5,
+      "EvaluationInterval": "00:00:15",
+      "SamplingPercentageDecreaseTimeout": "00:02:00",
+      "SamplingPercentageIncreaseTimeout": "00:15:00",
+      "MovingAverageRatio": 0.25,
+      "ExcludedTypes": "Exception",
+      "IncludedTypes": "Request;Dependency;Trace;Event;Metric;PageView"
+    }
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "System": "Warning"
     },
     "ApplicationInsights": {
       "LogLevel": {
-        "Default": "Information"
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     }
   },
@@ -29,7 +50,7 @@
   "MailchimpApiKey": "12345678901",
   "MailchimpAudienceId": "111111",
   "NotificationEmail": "info@sailscores.com",
-  "AzureSpeechRegion": "northcentralus",
+  "AzureSpeechRegion": "westus3",
   "AzureSpeechSubscriptionKey": "cogservicekeyGoesHere",
   "OpenWeatherMapAppId": "weatherAppId",
   "IndexNow": {
