--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -17,13 +17,15 @@
     "merge-stream": "2.0.0",
     "sass": "1.49.9",
     "ts-loader": "9.4.2",
-    "typescript": "3.7.4",
+    "typescript": "^5.9.3",
     "vinyl-named": "1.1.0",
     "webpack-stream": "7.0.0"
   },
   "dependencies": {
+    "@azure/core-auth": "^1.10.1",
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.3.5",
+    "cropperjs": "^2.1.0",
     "d3": "7.6.1",
     "devbridge-autocomplete": "^1.5.0",
     "dragula": "3.7.2",
@@ -32,6 +34,7 @@
     "jquery-ajax-unobtrusive": "3.2.6",
     "jquery-validation": "1.19.5",
     "jquery-validation-unobtrusive": "3.2.11",
+    "microsoft-cognitiveservices-speech-sdk": "^1.47.0",
     "select2": "^4.1.0-rc.0",
     "select2-bootstrap-5-theme": "1.3.0",
     "summernote": "0.8.20"
