Hide long regatta and more
Closes SailScores/SailScores#400
* Add date restriction fields to Series entity and update core logic
* Add unit tests for date-restricted series filtering
* Stripe Custom Amount
* Help work continues
* Enforce regatta series dates
* DateEnforced Series work with Regatta
* Calendar page added
* Filters out long regattas

--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -66,6 +66,7 @@
     <Folder Include="Areas\Api\Models\" />
     <Folder Include="Areas\Api\Views\" />
     <Folder Include="Data\" />
+    <Folder Include="Models\Calendar\" />
     <Folder Include="Views\Error\" />
     <Folder Include="wwwroot\lib\" />
     <Folder Include="wwwroot\vendor\bootstrap\js\" />
