Add links to Stripe customer portal

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -68,6 +68,7 @@
     "PublishableKey": "",
     "SecretKey": "",
     "MonthlyPriceId": "",
-    "YearlyPriceId": ""
+    "YearlyPriceId": "",
+    "CustomerPortalUrl": ""
   }
 }
