IndexNow first try
Add real indexnow api key

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -62,7 +62,8 @@
   "OpenWeatherMapAppId": "weatherAppId",
   "IndexNow": {
     "Token": "12345678901234567890",
-    "SubmissionUrl": "https://api.indexnow.org/IndexNow"
+    "SubmissionUrl": "https://api.indexnow.org/IndexNow",
+    "ApiKey": "88a77b9136b34ac68d5caf533b39f7df"
   },
   "Stripe": {
     "PublishableKey": "",
@@ -70,5 +71,8 @@
     "MonthlyPriceId": "",
     "YearlyPriceId": "",
     "CustomerPortalUrl": ""
+  },
+  "App": {
+    "BaseUrl": ""
   }
 }
